# unicode2hex

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
unicode2hex/: main.py
