[tool.poetry]
authors=["tizee <me@jeetizee.com>"]
description ="a python boilerplate project"
homepage = ""
name="boilerplate-python"
reademe="README.md"
repository = ""
version="0.0.1"
packages = [
{include = "example"}
]

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
  "Programming Language :: Python :: 3.7"
]

[tool.poetry.dependencies]
python = "3.7"

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "^5"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

