[tool.poetry]
authors=["tizee"]
description ="a python boilerplate project"
homepage = "https://github.com:tizee/unicode2hex"
name="unicode2hex"
repository = "git@github.com:tizee/unicode2hex.git"
version="0.0.1"
packages = [
{include = "main.py"}
]

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
  "Programming Language :: Python :: 3.7"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "^5"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

